# ficlap

./: .dockerignore  .gitignore  Cargo.toml  index.html  package.json  run.sh  tailwind.config.js
src/: components.rs  main.rs  models.rs  routes.rs  views.rs
src/components/: functions.rs  home.rs  info.rs  navigation.rs
src/views/: index.rs
src/views/festival/: components.rs  festival_view.rs  mod.rs
styles/: main.scss  styles.scss  tailwind.min.css  variables.scss
